# ModernCppStarter

./: Dockerfile
.github/workflows/: docker-cd.yml  docker-ci.yml  standalone.yml
standalone/: CMakeLists.txt  CMakePresets.json  service_test.sh
standalone/source/: main.cpp
